@@ -23,5 +23,5 @@ retracers:
  - cache Contents.gz
 
 retrace failures:
- - http://launchpadlibrarian.net/8320761/StacktraceSource.txt: dd.c not found
+ - Bug #124360: http://launchpadlibrarian.net/8320761/StacktraceSource.txt: dd.c not found
  - does not find files with complete path
